added contact info and header

--- a/index.html
+++ b/index.html
@@ -5,10 +5,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Simple Web Page</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
-    <header>
+    <header class="header">
         <h1>My Awesome Website</h1>
         <nav>
             <ul>
@@ -46,6 +47,18 @@
             </ul>
         </section>
     </main>
+    <section>
+        <h2>Contact</h2>
+        <p>If you'd like to reach out, feel free to visit our office:</p>
+        <address>
+            <p><strong>My Awesome Web Development Co.</strong></p>
+            <p>4464 Hickory Ridge Drive</p>
+            <p>Las Vegas, NV 55555</p>
+        </address>
+    </section>
+    <footer>
+        <p>&copy; Chris Doe 2024</p>
+    </footer>
 </body>
 
 </html>
